Creazione interfaccia Tavolo e sua implementazione, aggiunta data di default alla data corrente

--- a/src/layouts/Sample.fxml
+++ b/src/layouts/Sample.fxml
@@ -8,7 +8,7 @@
       <VBox>
          <children>
             <fx:include source="datepicker.fxml" />
-            <fx:include source="table.fxml" />
+            <fx:include source="MappaTavoli.fxml" />
          </children>
       </VBox>
    </children>
