--- a/src/layouts/AdminLogin.fxml
+++ b/src/layouts/AdminLogin.fxml
@@ -7,12 +7,13 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <TextField layoutX="226.0" layoutY="150.0" />
-      <PasswordField layoutX="226.0" layoutY="188.0" />
-      <Button layoutX="307.0" layoutY="232.0" mnemonicParsing="false" text="Conferma" />
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" 
+xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AdminLoginController">
+   <children> 
       <Label layoutX="183.0" layoutY="154.0" text="Utente:" />
+      <TextField layoutX="226.0" layoutY="150.0" />
       <Label layoutX="169.0" layoutY="192.0" text="Password:" />
+      <PasswordField layoutX="226.0" layoutY="188.0" />
+      <Button layoutX="307.0" layoutY="232.0" mnemonicParsing="false" text="Conferma" onAction="#loadTableView" />
    </children>
 </AnchorPane>
