--- a/src/layouts/UserDecision.fxml
+++ b/src/layouts/UserDecision.fxml
@@ -4,7 +4,8 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" 
+xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Button layoutX="36.0" layoutY="163.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="146.0" text="Prenota" />
       <Button layoutX="227.0" layoutY="163.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="146.0" text="Modifica Prenotazione" />
