--- a/src/layouts/ScenePrenotazione.fxml
+++ b/src/layouts/ScenePrenotazione.fxml
@@ -3,9 +3,9 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
@@ -55,17 +55,17 @@
    <bottom>
       <AnchorPane prefHeight="99.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="bottonePrenota" layoutX="70.0" layoutY="20.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="100.0" text="PRENOTA">
+            <Button fx:id="bottonePrenota" layoutX="70.0" layoutY="20.0" mnemonicParsing="false" onAction="#prenota" prefHeight="35.0" prefWidth="100.0" text="PRENOTA">
                <font>
                   <Font size="15.0" />
                </font>
             </Button>
-            <Button fx:id="bottoneReset" layoutX="250.0" layoutY="20.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="100.0" text="RESETTA">
+            <Button fx:id="bottoneReset" layoutX="250.0" layoutY="20.0" mnemonicParsing="false" onAction="#azzeraCampi" prefHeight="35.0" prefWidth="100.0" text="RESETTA">
                <font>
                   <Font size="15.0" />
                </font>
             </Button>
-            <Button fx:id="bottoneAnnulla" layoutX="430.0" layoutY="20.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="100.0" text="ANNULLA">
+            <Button fx:id="bottoneAnnulla" layoutX="430.0" layoutY="20.0" mnemonicParsing="false" onAction="#annullaPrenotazione" prefHeight="35.0" prefWidth="100.0" text="ANNULLA">
                <font>
                   <Font size="15.0" />
                </font>
@@ -80,12 +80,7 @@
             <TextField fx:id="testoCognome" layoutX="1.0" layoutY="62.0" prefHeight="25.0" prefWidth="204.0" promptText="Cognome" />
             <TextField fx:id="testoEmail" layoutX="1.0" layoutY="97.0" prefHeight="25.0" prefWidth="204.0" promptText="E-mail" />
             <TextField fx:id="testoTelefono" layoutX="31.0" layoutY="132.0" prefHeight="25.0" prefWidth="174.0" promptText="Numero telefonico" />
-            <DatePicker fx:id="scegliData" layoutX="1.0" layoutY="167.0" promptText="GG/MM/AA" />
-            <MenuButton fx:id="scegliTurno" layoutX="1.0" layoutY="202.0" mnemonicParsing="false" text="Pranzo">
-              <items>
-                <MenuItem mnemonicParsing="false" text="Cena" />
-              </items>
-            </MenuButton>
+            <DatePicker fx:id="testoData" layoutX="1.0" layoutY="167.0" promptText="GG/MM/AA" />
             <Label layoutX="4.0" layoutY="133.0" prefHeight="25.0" prefWidth="26.0" text="+39" underline="true">
                <font>
                   <Font size="13.0" />
@@ -94,6 +89,12 @@
             <Label fx:id="testoPosti" alignment="CENTER" contentDisplay="CENTER" layoutX="24.0" layoutY="238.0" prefHeight="24.0" prefWidth="23.0" text="0" textAlignment="CENTER" />
             <Button fx:id="bottonePiuPosti" layoutX="48.0" layoutY="237.0" mnemonicParsing="false" text="+" />
             <Button fx:id="bottoneMenoPosti" layoutX="1.0" layoutY="237.0" mnemonicParsing="false" text="-" />
+            <RadioButton fx:id="bottonePranzo" layoutX="1.0" layoutY="205.0" mnemonicParsing="false" text="Pranzo">
+               <toggleGroup>
+                  <ToggleGroup fx:id="turno" />
+               </toggleGroup>
+            </RadioButton>
+            <RadioButton fx:id="bottoneCena" layoutX="81.0" layoutY="205.0" mnemonicParsing="false" text="Cena" toggleGroup="$turno" />
          </children>
       </AnchorPane>
    </center>
