--- a/src/layouts/MappaTavoli.fxml
+++ b/src/layouts/MappaTavoli.fxml
@@ -8,17 +8,17 @@
    <children>
       <AnchorPane>
          <children>
-            <Button layoutX="27.0" layoutY="40.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="146.0" text="1" />
-            <Button layoutX="262.0" layoutY="47.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="146.0" text="2" />
-            <Button layoutX="513.0" layoutY="27.0" mnemonicParsing="false" prefHeight="139.0" prefWidth="79.0" text="3" />
-            <Button layoutX="37.0" layoutY="200.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="79.0" text="4" />
-            <Button layoutX="185.0" layoutY="166.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="168.0" text="5" />
-            <Button layoutX="408.0" layoutY="200.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="79.0" text="6" />
-            <Button layoutX="100.0" layoutY="310.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="146.0" text="7" />
-            <Button layoutX="363.0" layoutY="310.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="146.0" text="8" />
-            <Button layoutX="553.0" layoutY="200.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="146.0" text="9" />
-            <Button layoutX="685.0" layoutY="27.0" mnemonicParsing="false" prefHeight="139.0" prefWidth="79.0" text="10" />
-            <Button layoutX="587.0" layoutY="300.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="79.0" text="11" />
+            <Button fx:id="1" layoutX="27.0" layoutY="40.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="146.0" text="1" />
+            <Button fx:id="2" layoutX="262.0" layoutY="47.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="146.0" text="2" />
+            <Button fx:id="3" layoutX="513.0" layoutY="27.0" mnemonicParsing="false" prefHeight="139.0" prefWidth="79.0" text="3" />
+            <Button fx:id="4" layoutX="37.0" layoutY="200.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="79.0" text="4" />
+            <Button fx:id="5" layoutX="185.0" layoutY="166.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="168.0" text="5" />
+            <Button fx:id="6" layoutX="408.0" layoutY="200.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="79.0" text="6" />
+            <Button fx:id="7" layoutX="100.0" layoutY="310.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="146.0" text="7" />
+            <Button fx:id="8" layoutX="363.0" layoutY="310.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="146.0" text="8" />
+            <Button fx:id="9" layoutX="553.0" layoutY="200.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="146.0" text="9" />
+            <Button fx:id="10" layoutX="685.0" layoutY="27.0" mnemonicParsing="false" prefHeight="139.0" prefWidth="79.0" text="10" />
+            <Button fx:id="11" layoutX="587.0" layoutY="300.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="79.0" text="11" />
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="20.0" />
