--- a/src/layouts/MappaTavoli.fxml
+++ b/src/layouts/MappaTavoli.fxml
@@ -2,27 +2,44 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.TableController">
+<AnchorPane xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Controller">
    <children>
-      <AnchorPane>
+      <VBox>
          <children>
-            <Button fx:id="1" layoutX="27.0" layoutY="40.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="146.0" text="1" />
-            <Button fx:id="2" layoutX="262.0" layoutY="47.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="146.0" text="2" />
-            <Button fx:id="3" layoutX="513.0" layoutY="27.0" mnemonicParsing="false" prefHeight="139.0" prefWidth="79.0" text="3" />
-            <Button fx:id="4" layoutX="37.0" layoutY="200.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="79.0" text="4" />
-            <Button fx:id="5" layoutX="185.0" layoutY="166.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="168.0" text="5" />
-            <Button fx:id="6" layoutX="408.0" layoutY="200.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="79.0" text="6" />
-            <Button fx:id="7" layoutX="100.0" layoutY="310.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="146.0" text="7" />
-            <Button fx:id="8" layoutX="363.0" layoutY="310.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="146.0" text="8" />
-            <Button fx:id="9" layoutX="553.0" layoutY="200.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="146.0" text="9" />
-            <Button fx:id="10" layoutX="685.0" layoutY="27.0" mnemonicParsing="false" prefHeight="139.0" prefWidth="79.0" text="10" />
-            <Button fx:id="11" layoutX="587.0" layoutY="300.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="79.0" text="11" />
+            <AnchorPane fx:id="paneData" style="-fx-background-color: White; -fx-border-color: Grey;">
+               <children>
+                  <DatePicker fx:id="datePicker" editable="false" layoutX="14.0" onAction="#dateHandler" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <Button layoutX="692.0" mnemonicParsing="false" onAction="#tornaIndietroHandler" text="Torna Indietro" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <ChoiceBox fx:id="periodBox" layoutX="330.0" onAction="#handlerPeriodo" prefWidth="150.0" AnchorPane.topAnchor="0.0" />
+               </children>
+               <padding>
+                  <Insets bottom="10.0" left="8.0" right="5.0" top="10.0" />
+               </padding>
+            </AnchorPane>
+            <AnchorPane fx:id="paneTavoli">
+               <children>
+                  <Button fx:id="1" layoutX="27.0" layoutY="40.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="146.0" text="1" />
+                  <Button fx:id="2" layoutX="262.0" layoutY="47.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="146.0" text="2" />
+                  <Button fx:id="3" layoutX="513.0" layoutY="27.0" mnemonicParsing="false" prefHeight="139.0" prefWidth="79.0" text="3" />
+                  <Button fx:id="4" layoutX="37.0" layoutY="200.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="79.0" text="4" />
+                  <Button fx:id="5" layoutX="185.0" layoutY="166.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="168.0" text="5" />
+                  <Button fx:id="6" layoutX="408.0" layoutY="200.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="79.0" text="6" />
+                  <Button fx:id="7" layoutX="100.0" layoutY="310.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="146.0" text="7" />
+                  <Button fx:id="8" layoutX="363.0" layoutY="310.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="146.0" text="8" />
+                  <Button fx:id="9" layoutX="553.0" layoutY="200.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="146.0" text="9" />
+                  <Button fx:id="10" layoutX="685.0" layoutY="27.0" mnemonicParsing="false" prefHeight="139.0" prefWidth="79.0" text="10" />
+                  <Button fx:id="11" layoutX="609.0" layoutY="310.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="132.0" text="11" />
+               </children>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="20.0" />
+               </padding>
+            </AnchorPane>
          </children>
-         <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="20.0" />
-         </padding>
-      </AnchorPane>
+      </VBox>
    </children>
 </AnchorPane>
