--- a/src/layouts/CercaPrenotazione.fxml
+++ b/src/layouts/CercaPrenotazione.fxml
@@ -8,34 +8,39 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="307.0" prefWidth="448.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ControllerCercaPrenotazione">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="307.0" prefWidth="448.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <left>
-      <AnchorPane prefHeight="232.0" prefWidth="225.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="208.0" prefWidth="448.0" BorderPane.alignment="CENTER">
          <children>
-            <Label layoutX="40.0" layoutY="52.0" text="Codice prenotazione">
+            <Label layoutX="40.0" layoutY="42.0" text="Codice prenotazione">
                <font>
                   <Font size="17.0" />
                </font>
             </Label>
-            <Label layoutX="40.0" layoutY="133.0" text="Cognome">
+            <Label layoutX="40.0" layoutY="123.0" text="Cognome">
                <font>
                   <Font size="17.0" />
                </font>
             </Label>
-            <TextField fx:id="testoCodice" layoutX="40.0" layoutY="83.0" prefHeight="25.0" prefWidth="181.0" promptText="CODICE PRENOTAZIONE" />
-            <TextField fx:id="testoCognome" layoutX="40.0" layoutY="164.0" prefHeight="25.0" prefWidth="181.0" promptText="COGNOME" />
+            <TextField fx:id="testoCodice" layoutX="40.0" layoutY="73.0" prefHeight="25.0" prefWidth="181.0" promptText="CODICE PRENOTAZIONE" />
+            <TextField fx:id="testoCognome" layoutX="40.0" layoutY="154.0" prefHeight="25.0" prefWidth="181.0" promptText="COGNOME" />
+            <Label fx:id="testoErrore" layoutX="40.0" layoutY="195.0" prefHeight="22.0" prefWidth="225.0" text="Errore - dati in input non trovati" textFill="#f50000">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </left>
    <bottom>
-      <AnchorPane prefHeight="104.0" prefWidth="448.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="63.0" prefWidth="448.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="bottoneConferma" layoutX="74.0" layoutY="47.0" mnemonicParsing="false" onAction="#controllaInserimento" text="CONFERMA">
+            <Button fx:id="bottoneConferma" layoutX="80.0" layoutY="5.0" mnemonicParsing="false" text="CONFERMA">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
-            <Button fx:id="bottoneAnnulla" layoutX="287.0" layoutY="47.0" mnemonicParsing="false" text="ANNULLA">
+            <Button fx:id="bottoneAnnulla" layoutX="286.0" layoutY="5.0" mnemonicParsing="false" text="ANNULLA">
                <font>
                   <Font size="14.0" />
                </font>
