--- a/src/layouts/tavoloOccupato.css
+++ b/src/layouts/tavoloOccupato.css
@@ -1,4 +1,5 @@
 /* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
 .button{
 	-fx-background-color: #FF0000;
+	-fx-text-fill: white; 
 }
