--- a/src/layouts/MappaTavoli.fxml
+++ b/src/layouts/MappaTavoli.fxml
@@ -4,36 +4,45 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Controller">
+<AnchorPane prefHeight="494.0" prefWidth="1035.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Controller">
    <children>
-      <VBox>
+      <VBox prefHeight="496.0" prefWidth="1035.0">
          <children>
-            <AnchorPane fx:id="paneData" style="-fx-background-color: White; -fx-border-color: Grey;">
+            <AnchorPane fx:id="paneData" prefHeight="47.0" prefWidth="1035.0" style="-fx-background-color: White; -fx-border-color: Grey;">
                <children>
                   <DatePicker fx:id="datePicker" editable="false" layoutX="14.0" onAction="#topMenuHandler" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                  <Button layoutX="692.0" mnemonicParsing="false" onAction="#tornaIndietroHandler" text="Torna Indietro" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                  <ChoiceBox fx:id="periodBox" layoutX="330.0" onAction="#topMenuHandler" prefWidth="150.0" AnchorPane.topAnchor="0.0" />
+                  <Button layoutX="692.0" mnemonicParsing="false" onAction="#tornaIndietroHandler" text="Torna Indietro" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="0.0" />
+                  <ChoiceBox fx:id="periodBox" layoutX="330.0" onAction="#topMenuHandler" prefWidth="150.0" AnchorPane.rightAnchor="442.0" AnchorPane.topAnchor="0.0" />
                </children>
                <padding>
                   <Insets bottom="10.0" left="8.0" right="5.0" top="10.0" />
                </padding>
             </AnchorPane>
-            <AnchorPane fx:id="paneTavoli">
+            <TextField fx:id="typeUser" editable="true" VBox.vgrow="NEVER">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <VBox.margin>
+                  <Insets left="300.0" right="300.0" />
+               </VBox.margin>
+            </TextField>
+            <AnchorPane fx:id="paneTavoli" prefHeight="422.0" prefWidth="1035.0">
                <children>
-                  <Button fx:id="1" layoutX="27.0" layoutY="40.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="146.0" text="1" />
-                  <Button fx:id="2" layoutX="262.0" layoutY="47.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="146.0" text="2" />
-                  <Button fx:id="3" layoutX="513.0" layoutY="27.0" mnemonicParsing="false" prefHeight="139.0" prefWidth="79.0" text="3" />
-                  <Button fx:id="4" layoutX="37.0" layoutY="200.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="79.0" text="4" />
-                  <Button fx:id="5" layoutX="185.0" layoutY="166.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="168.0" text="5" />
-                  <Button fx:id="6" layoutX="408.0" layoutY="200.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="79.0" text="6" />
-                  <Button fx:id="7" layoutX="100.0" layoutY="310.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="146.0" text="7" />
-                  <Button fx:id="8" layoutX="363.0" layoutY="310.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="146.0" text="8" />
-                  <Button fx:id="9" layoutX="553.0" layoutY="200.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="146.0" text="9" />
-                  <Button fx:id="10" layoutX="685.0" layoutY="27.0" mnemonicParsing="false" prefHeight="139.0" prefWidth="79.0" text="10" />
-                  <Button fx:id="11" layoutX="609.0" layoutY="310.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="132.0" text="11" />
+                  <Button fx:id="1" layoutX="47.0" layoutY="41.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="150.0" text="1" />
+                  <Button fx:id="2" layoutX="282.0" layoutY="47.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="162.0" text="2" />
+                  <Button fx:id="3" layoutX="575.0" layoutY="47.0" mnemonicParsing="false" prefHeight="83.0" prefWidth="176.0" text="3" />
+                  <Button fx:id="4" layoutX="37.0" layoutY="185.0" mnemonicParsing="false" prefHeight="83.0" prefWidth="92.0" text="4" />
+                  <Button fx:id="5" layoutX="197.0" layoutY="189.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="168.0" text="5" />
+                  <Button fx:id="6" layoutX="456.0" layoutY="185.0" mnemonicParsing="false" prefHeight="83.0" prefWidth="99.0" text="6" />
+                  <Button fx:id="7" layoutX="89.0" layoutY="313.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="146.0" text="7" />
+                  <Button fx:id="8" layoutX="379.0" layoutY="316.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="168.0" text="8" />
+                  <Button fx:id="9" layoutX="636.0" layoutY="193.0" mnemonicParsing="false" prefHeight="83.0" prefWidth="162.0" text="9" />
+                  <Button fx:id="10" layoutX="883.0" layoutY="47.0" mnemonicParsing="false" prefHeight="166.0" prefWidth="92.0" text="10" />
+                  <Button fx:id="11" layoutX="833.0" layoutY="309.0" mnemonicParsing="false" prefHeight="83.0" prefWidth="150.0" text="11" />
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="20.0" />
