--- a/src/layouts/AdminUserSelection.fxml
+++ b/src/layouts/AdminUserSelection.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" 
-xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AdminUserSelectionController">
+xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.adminuser.AdminUserSelectionController">
    <children>
       <Button layoutX="116.0" layoutY="128.0" mnemonicParsing="false" prefHeight="138.0" prefWidth="143.0" text="Prenota" onAction="#loadUserDecision"/>
       <Button layoutX="371.0" layoutY="131.0" mnemonicParsing="false"  prefHeight="138.0" prefWidth="143.0" text="Login Amministratore" onAction="#loadAdminLogin" />
