--- a/src/layouts/MappaTavoli.fxml
+++ b/src/layouts/MappaTavoli.fxml
@@ -4,9 +4,10 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="494.0" prefWidth="1035.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.piantina.Controller">
    <children>
@@ -22,14 +23,15 @@
                   <Insets bottom="10.0" left="8.0" right="5.0" top="10.0" />
                </padding>
             </AnchorPane>
-            <TextField fx:id="typeUser" editable="true" VBox.vgrow="NEVER">
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <VBox.margin>
-                  <Insets left="300.0" right="300.0" />
-               </VBox.margin>
-            </TextField>
+            <AnchorPane>
+               <children>
+                  <Text fx:id="testoUtente" layoutX="490.0" layoutY="13.0" strokeType="OUTSIDE" strokeWidth="0.0" text="" textAlignment="CENTER" wrappingWidth="54.13671875" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <font>
+                        <Font size="13.0" />
+                     </font>
+                  </Text>
+               </children>
+            </AnchorPane>
             <AnchorPane fx:id="paneTavoli" prefHeight="422.0" prefWidth="1035.0">
                <children>
                   <Button fx:id="1" layoutX="47.0" layoutY="41.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="150.0" text="1" />
