--- a/src/layouts/Riepilogo.fxml
+++ b/src/layouts/Riepilogo.fxml
@@ -7,11 +7,11 @@
 <?import javafx.scene.text.Font?>
 
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SampleController">
+<BorderPane fx:id="pannello" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.riepilogo.ControllerRiepilogo">
    <bottom>
       <AnchorPane prefHeight="91.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="bottoneFine" layoutX="258.0" layoutY="20.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="84.0" text="FINE">
+            <Button fx:id="bottoneFine" layoutX="258.0" layoutY="20.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="84.0" text="FINE" onAction="#handlerFine">
                <font>
                   <Font size="19.0" />
                </font>
@@ -22,7 +22,7 @@
    <top>
       <AnchorPane prefHeight="85.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <Label fx:id="spazioRiepilogo" layoutX="147.0" layoutY="43.0" prefHeight="30.0" prefWidth="202.0">
+            <Label fx:id="spazioTitolo" layoutX="147.0" layoutY="43.0" prefHeight="30.0" prefWidth="202.0">
                <font>
                   <Font size="20.0" />
                </font>
