--- a/src/layouts/MappaTavoli.fxml
+++ b/src/layouts/MappaTavoli.fxml
@@ -34,17 +34,50 @@
             </AnchorPane>
             <AnchorPane fx:id="paneTavoli" prefHeight="422.0" prefWidth="1035.0">
                <children>
-                  <Button fx:id="1" layoutX="47.0" layoutY="41.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="150.0" text="1" />
-                  <Button fx:id="2" layoutX="282.0" layoutY="47.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="162.0" text="2" />
-                  <Button fx:id="3" layoutX="575.0" layoutY="47.0" mnemonicParsing="false" prefHeight="83.0" prefWidth="176.0" text="3" />
-                  <Button fx:id="4" layoutX="37.0" layoutY="185.0" mnemonicParsing="false" prefHeight="83.0" prefWidth="92.0" text="4" />
-                  <Button fx:id="5" layoutX="197.0" layoutY="189.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="168.0" text="5" />
-                  <Button fx:id="6" layoutX="456.0" layoutY="185.0" mnemonicParsing="false" prefHeight="83.0" prefWidth="99.0" text="6" />
-                  <Button fx:id="7" layoutX="89.0" layoutY="313.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="146.0" text="7" />
-                  <Button fx:id="8" layoutX="379.0" layoutY="316.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="168.0" text="8" />
-                  <Button fx:id="9" layoutX="636.0" layoutY="193.0" mnemonicParsing="false" prefHeight="83.0" prefWidth="162.0" text="9" />
-                  <Button fx:id="10" layoutX="883.0" layoutY="47.0" mnemonicParsing="false" prefHeight="166.0" prefWidth="92.0" text="10" />
-                  <Button fx:id="11" layoutX="833.0" layoutY="309.0" mnemonicParsing="false" prefHeight="83.0" prefWidth="150.0" text="11" />
+                  <Button fx:id="1" layoutX="47.0" layoutY="41.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="150.0" text="1">
+                     <font>
+                        <Font name="Segoe UI Historic" size="20.0" />
+                     </font></Button>
+                  <Button fx:id="2" layoutX="282.0" layoutY="47.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="162.0" text="2">
+                     <font>
+                        <Font name="Segoe UI Historic" size="20.0" />
+                     </font></Button>
+                  <Button fx:id="3" layoutX="575.0" layoutY="47.0" mnemonicParsing="false" prefHeight="83.0" prefWidth="176.0" text="3">
+                     <font>
+                        <Font name="Segoe UI Historic" size="20.0" />
+                     </font></Button>
+                  <Button fx:id="4" layoutX="37.0" layoutY="185.0" mnemonicParsing="false" prefHeight="83.0" prefWidth="92.0" text="4">
+                     <font>
+                        <Font name="Segoe UI Historic" size="20.0" />
+                     </font></Button>
+                  <Button fx:id="5" layoutX="197.0" layoutY="189.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="168.0" text="5">
+                     <font>
+                        <Font name="Segoe UI Historic" size="20.0" />
+                     </font></Button>
+                  <Button fx:id="6" layoutX="456.0" layoutY="185.0" mnemonicParsing="false" prefHeight="83.0" prefWidth="99.0" text="6">
+                     <font>
+                        <Font name="Segoe UI Historic" size="20.0" />
+                     </font></Button>
+                  <Button fx:id="7" layoutX="89.0" layoutY="313.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="146.0" text="7">
+                     <font>
+                        <Font name="Segoe UI Historic" size="20.0" />
+                     </font></Button>
+                  <Button fx:id="8" layoutX="379.0" layoutY="316.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="168.0" text="8">
+                     <font>
+                        <Font name="Segoe UI Historic" size="20.0" />
+                     </font></Button>
+                  <Button fx:id="9" layoutX="636.0" layoutY="193.0" mnemonicParsing="false" prefHeight="83.0" prefWidth="162.0" text="9">
+                     <font>
+                        <Font name="Segoe UI Historic" size="20.0" />
+                     </font></Button>
+                  <Button fx:id="10" layoutX="883.0" layoutY="47.0" mnemonicParsing="false" prefHeight="166.0" prefWidth="92.0" text="10">
+                     <font>
+                        <Font name="Segoe UI Historic" size="20.0" />
+                     </font></Button>
+                  <Button fx:id="11" layoutX="833.0" layoutY="309.0" mnemonicParsing="false" prefHeight="83.0" prefWidth="150.0" text="11">
+                     <font>
+                        <Font name="Segoe UI Historic" size="20.0" />
+                     </font></Button>
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="20.0" />
