--- a/src/layouts/tavoloOccupato.css
+++ b/src/layouts/tavoloOccupato.css
@@ -1,5 +1,6 @@
 /* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
 .button{
-	-fx-background-color: #FF0000;
+	-fx-background-color: #F64343;
 	-fx-text-fill: white; 
+	-fx-opacity: 0.8; 
 }
