Migliorata la leggibilita' di piccole parti di codice

--- a/src/layouts/ScenePrenotazione.fxml
+++ b/src/layouts/ScenePrenotazione.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="pannello" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.creaprenotazione.ControllerPrenotazione">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.creaprenotazione.ControllerPrenotazione">
    <left>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
@@ -74,7 +74,7 @@
       </AnchorPane>
    </bottom>
    <center>
-      <AnchorPane prefHeight="353.0" prefWidth="400.0" BorderPane.alignment="CENTER">
+      <AnchorPane fx:id="ancora" prefHeight="353.0" prefWidth="400.0" BorderPane.alignment="CENTER">
          <children>
             <TextField fx:id="testoNome" layoutX="1.0" layoutY="27.0" prefHeight="25.0" prefWidth="204.0" promptText="Nome" />
             <TextField fx:id="testoCognome" layoutX="1.0" layoutY="62.0" prefHeight="25.0" prefWidth="204.0" promptText="Cognome" />
