--- a/src/layouts/ScenePrenotazione.fxml
+++ b/src/layouts/ScenePrenotazione.fxml
@@ -49,6 +49,11 @@
                   <Font size="19.0" />
                </font>
             </Label>
+            <Label fx:id="etichettaTavolo" layoutX="27.0" layoutY="270.0" prefHeight="28.0" prefWidth="163.0">
+               <font>
+                  <Font size="19.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </left>
@@ -102,6 +107,11 @@
             </Label>
             <Label alignment="CENTER" contentDisplay="CENTER" layoutX="46.0" layoutY="238.0" prefHeight="24.0" prefWidth="12.0" text="/" textAlignment="CENTER" />
             <Label fx:id="massimoPosti" alignment="CENTER" contentDisplay="CENTER" layoutX="58.0" layoutY="238.0" prefHeight="24.0" prefWidth="23.0" textAlignment="CENTER" />
+            <Label fx:id="errore" layoutX="3.0" layoutY="279.0" prefHeight="21.0" prefWidth="252.0" text="Errore - dati inseriti non corretti" textFill="RED">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </center>
