--- a/src/layouts/MappaTavoli.fxml
+++ b/src/layouts/MappaTavoli.fxml
@@ -9,14 +9,14 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="494.0" prefWidth="1035.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.piantina.Controller">
+<AnchorPane fx:id="panePrincipale" prefHeight="494.0" prefWidth="1035.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.piantina.Controller">
    <children>
       <VBox prefHeight="496.0" prefWidth="1035.0">
          <children>
             <AnchorPane fx:id="paneData" prefHeight="47.0" prefWidth="1035.0" style="-fx-background-color: White; -fx-border-color: Grey;">
                <children>
                   <DatePicker fx:id="datePicker" editable="false" layoutX="14.0" onAction="#topMenuHandler" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                  <Button layoutX="692.0" mnemonicParsing="false" onAction="#tornaIndietroHandler" text="Torna Indietro" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="0.0" />
+                  <Button fx:id="buttonTornaIndietro" layoutX="692.0" mnemonicParsing="false" onAction="#tornaIndietroHandler" text="Torna Indietro" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="0.0" />
                   <ChoiceBox fx:id="periodBox" layoutX="330.0" onAction="#topMenuHandler" prefWidth="150.0" AnchorPane.rightAnchor="442.0" AnchorPane.topAnchor="0.0" />
                   <Text fx:id="testoOrario" layoutX="623.0" layoutY="104.1865234375" strokeType="OUTSIDE" strokeWidth="0.0" text="" textAlignment="CENTER" wrappingWidth="106.13671875" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <font>
