--- a/src/layouts/MappaTavoli.fxml
+++ b/src/layouts/MappaTavoli.fxml
@@ -9,14 +9,14 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="panePrincipale" prefHeight="494.0" prefWidth="1035.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.piantina.Controller">
+<AnchorPane fx:id="panePrincipale" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.piantina.Controller">
    <children>
-      <VBox prefHeight="496.0" prefWidth="1035.0">
+      <VBox>
          <children>
-            <AnchorPane fx:id="paneData" prefHeight="47.0" prefWidth="1035.0" style="-fx-background-color: White; -fx-border-color: Grey;">
+            <AnchorPane fx:id="paneData" style="-fx-background-color: White; -fx-border-color: Grey;">
                <children>
                   <DatePicker fx:id="datePicker" editable="false" layoutX="14.0" onAction="#topMenuHandler" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                  <Button layoutX="692.0" mnemonicParsing="false" onAction="#tornaIndietroHandler" text="Torna Indietro" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="0.0" />
+                  <Button layoutX="692.0" mnemonicParsing="false" onAction="#tornaIndietroHandler" text="Torna Indietro" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="0.0" />
                   <ChoiceBox fx:id="periodBox" layoutX="330.0" onAction="#topMenuHandler" prefWidth="150.0" AnchorPane.rightAnchor="442.0" AnchorPane.topAnchor="0.0" />
                   <Text fx:id="testoOrario" layoutX="623.0" layoutY="104.1865234375" strokeType="OUTSIDE" strokeWidth="0.0" text="" textAlignment="CENTER" wrappingWidth="106.13671875" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <font>
@@ -37,7 +37,7 @@
                   </Text>
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="paneTavoli" prefHeight="422.0" prefWidth="1035.0">
+            <AnchorPane fx:id="paneTavoli">
                <children>
                   <Button fx:id="1" layoutX="47.0" layoutY="41.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="150.0" text="1">
                      <font>
@@ -85,7 +85,7 @@
                      </font></Button>
                </children>
                <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="20.0" />
+                  <Insets left="10.0" right="25.0" top="20.0" />
                </padding>
             </AnchorPane>
          </children>
